# PyJaipur

./: .gitignore  README.md  algos.md  amity_talk.md  manage.py  pyproject.toml  requirements.txt  soa_proposal.md  x
.backup/repositories/PyJaipur/issues/: 100.json  101.json  102.json  103.json  106.json  109.json  11.json  113.json  119.json  12.json  121.json  123.json  124.json  126.json  128.json  13.json  133.json  135.json  139.json  14.json  140.json  141.json  142.json  146.json  149.json  15.json  151.json  153.json  155.json  158.json  16.json  160.json  19.json  20.json  21.json  22.json  25.json  26.json  27.json  3.json  (+26 more)
.backup/repositories/PyJaipur/labels/: labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  event.md  new_event.md  new_talk.md  talk.md  talk_proposal.md  volunteer_meet.md
.github/PULL_REQUEST_TEMPLATE/: new_event.md
.github/workflows/: community_calls.yml
Meetup-3/: README.md
Questions/: Doubly Link List.py  readme.txt
announce/: __init__.py  __main__.py  auth.py  const.py  core.py
events/2019/Meetup-3/: README.md
scratch/: README.md  amity_talk.md  youLike.py
scratch/weeklyattempts/126/: Pykid.md
templates/emails/: monthly.txt
website/: .gitignore  README.md  plugins.py  staticsite.yaml
website/css/: index.css
website/src/: .autoreload.html  .base.html  .event_archive.html  .events.html  .external_links.html  .mom_list.html  .platforms.html  all_events.html  archives.html  index.html  internships.html  jobs_and_internships.html  old_meetups.html
website/src/css/: .base.css  .theme.css  index.css
(+122 files in other folders)
