[tool.poetry]
name = "pyjaipur"
version = "0.1.0"
description = "PyJaipur main repo code"
authors = ["arjoonn sharma <arjoonn.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
staticsite = "^0.1.0"
requests = "^2.23.0"
requests-oauthlib = "^1.3.0"
google-api-python-client = "^1.8.4"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
pendulum = "^2.1.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
