[tool.poetry]
name = "pyjaipur"
version = "0.1.0"
description = "PyJaipur main repo code"
authors = ["arjoonn sharma <arjoonn.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
staticsite = "^0.1.0"
pendulum = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
